[tool.poetry]
name = "mkociso"
version = "0.1.0"
description = ""
authors = ["Alex Diaz <alex@akdev.xyz>"]
readme = "README.md"
packages = [{include = "mkociso", from = "src"}]

[tool.poetry.scripts]
mkociso = "mkociso.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28"
boto3 = "^1.26"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
